@@ -718,6 +718,11 @@ STDAPI OleCreatePropertyFrame(HWND,UINT,UINT,LPCOLESTR,ULONG,LPUNKNOWN*,ULONG,LP
 STDAPI OleCreatePropertyFrameIndirect(LPOCPFIPARAMS);
 STDAPI_(HCURSOR) OleIconToCursor(HINSTANCE,HICON);
 STDAPI OleLoadPicture(LPSTREAM,LONG,BOOL,REFIID,PVOID*);
+STDAPI OleLoadPictureEx(LPSTREAM,LONG,BOOL,REFIID,DWORD,DWORD,DWORD,LPVOID*);
+STDAPI OleLoadPicturePath(LPOLESTR,LPUNKNOWN,DWORD,OLE_COLOR,LPVOID*);
+STDAPI OleLoadPictureFile(VARIANT,LPDISPATCH*);
+STDAPI OleLoadPictureFileEx(VARIANT,DWORD,DWORD,DWORD,LPDISPATCH*);
+STDAPI OleSavePictureFile(LPDISPATCH,BSTR);
 STDAPI OleTranslateColor(OLE_COLOR,HPALETTE,COLORREF*);
 #ifdef __cplusplus
 }
